Fix status bar icons gap

--- a/packages/core/src/browser/style/sidepanel.css
+++ b/packages/core/src/browser/style/sidepanel.css
@@ -35,7 +35,6 @@
 .lm-TabBar.theia-app-sides {
   display: block;
   color: var(--theia-activityBar-inactiveForeground);
-  background: var(--theia-activityBar-background);
   font-size: var(--theia-ui-font-size1);
   min-width: var(--theia-private-sidebar-tab-width);
   max-width: var(--theia-private-sidebar-tab-width);
@@ -52,7 +51,6 @@
 
 .lm-TabBar.theia-app-sides .lm-TabBar-tab {
   position: relative;
-  background: var(--theia-activityBar-background);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -144,6 +142,14 @@
 #theia-left-content-panel.theia-mod-collapsed,
 #theia-right-content-panel.theia-mod-collapsed {
   max-width: var(--theia-private-sidebar-tab-width);
+}
+
+#theia-left-content-panel.theia-mod-collapsed .theia-app-sidebar-container {
+  border-right: none;
+}
+
+#theia-right-content-panel.theia-mod-collapsed .theia-app-sidebar-container {
+  border-left: none;
 }
 
 #theia-left-content-panel > .lm-Panel {
